# Phoenix

./: .gitignore  README.md
G4Sims/G4P-AmBeCube/: CMakeLists.txt  build-n-vis.sh  main.cc  vis.sh
G4Sims/G4P-AmBeCube/include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyPhysicsList.hh  MyPrimaryGenerator.hh  MyRunAction.hh  MySensitiveDetector.hh
G4Sims/G4P-AmBeCube/include/.ipynb_checkpoints/: MyActionInitialization-checkpoint.hh  MyDetectorConstruction-checkpoint.hh  MyPrimaryGenerator-checkpoint.hh  SpectrumSampler-checkpoint.hh
G4Sims/G4P-AmBeCube/loc_data/dump/: output0_nt_Hits.csv
G4Sims/G4P-AmBeCube/macros/: run1.mac  vis.mac
G4Sims/G4P-AmBeCube/src/: MyActionInitialization.cc  MyDetectorConstruction.cc  MyPhysicsList.cc  MyPrimaryGenerator.cc  MyRunAction.cc
G4Sims/G4P-AmBeCube/src/.ipynb_checkpoints/: MyActionInitialization-checkpoint.cc  MyDetectorConstruction-checkpoint.cc  MyPhysicsList-checkpoint.cc  MyRunAction-checkpoint.cc  MySensitiveDetector-checkpoint.cc
G4Sims/G4P-CoCsCube/: CMakeLists.txt  README.md  main.cc
G4Sims/G4P-CoCsCube/include/: MyAction.hh  MyDetector.hh  MyGenerator.hh  MyPhysics.hh  MyRun.hh  MyTracking.hh
G4Sims/G4P-CoCsCube/include/.ipynb_checkpoints/: MyAction-checkpoint.hh  MyConstruction-checkpoint.hh  MyRun-checkpoint.hh
G4Sims/G4P-CoCsCube/loc_data/Compare_Run/: README.md  WISCO0_nt_Hits.csv  WISCO10_nt_Hits.csv  WISCO11_nt_Hits.csv  WISCO1_nt_Hits.csv  WISCO2_nt_Hits.csv  (+7 more)
G4Sims/G4P-CoCsCube/src/: MyAction.cc  MyConstruction.cc  MyDetector.cc  MyGenerator.cc  MyRun.cc  MyTracking.cc
(+24 files in other folders)
